--- a/index.html
+++ b/index.html
@@ -142,20 +142,20 @@ $(document).ready(function () {
 </thead>
 <tbody>
 <tr class="odd">
-<td>Phillies</td>
-<td>National</td>
+<td>Liverpool</td>
+<td>PL</td>
 </tr>
 <tr class="even">
-<td>Yankees</td>
-<td>American</td>
+<td>LAFC</td>
+<td>MLS</td>
 </tr>
 <tr class="odd">
-<td>Cubs</td>
-<td>National</td>
+<td>Roma</td>
+<td>Serie A</td>
 </tr>
 <tr class="even">
-<td>Red Sox</td>
-<td>American</td>
+<td>Dortmund</td>
+<td>Bundesliga</td>
 </tr>
 </tbody>
 </table>
