--- a/index.html
+++ b/index.html
@@ -357,6 +357,65 @@ sqldf(query)</code></pre>
 ## 64 boudrlo01   1948    CLE  9 560
 ## 65 mitchda01   1952    CLE  9 511</code></pre>
 <hr />
+<pre class="r"><code>query&lt;-&quot;SELECT playerID, sum(HR) FROM Batting
+WHERE playerID='ruthba01'
+GROUP BY playerID&quot;
+
+sqldf(query)</code></pre>
+<pre><code>##   playerID sum(HR)
+## 1 ruthba01     714</code></pre>
+<hr />
+<pre class="r"><code>query&lt;-&quot;SELECT playerID, sum(HR) FROM Batting
+GROUP BY playerID
+HAVING avg(HR)&gt;30
+ORDER BY avg(HR) DESC&quot;
+
+sqldf(query)</code></pre>
+<pre><code>##     playerID sum(HR)
+## 1  pujolal01     591
+## 2  bondsba01     762
+## 3  mcgwima01     583
+## 4  kinerra01     369
+## 5  aaronha01     755
+## 6  bryankr01      65
+## 7   ruthba01     714
+## 8   sosasa01     609
+## 9  cabremi01     446
+## 10 belleal01     381
+## 11 rodrial01     696
+## 12 schmimi01     548
+## 13 abreujo02      91</code></pre>
+<hr />
+<pre class="r"><code>query&lt;-&quot;SELECT nameFirst,nameLast,yearID,teamID,HR 
+FROM Batting INNER JOIN Master
+ON Batting.playerID=Master.playerID
+WHERE Batting.playerID='ruthba01'&quot;
+
+sqldf(query)</code></pre>
+<pre><code>##    nameFirst nameLast yearID teamID HR
+## 1       Babe     Ruth   1914    BOS  0
+## 2       Babe     Ruth   1915    BOS  4
+## 3       Babe     Ruth   1916    BOS  3
+## 4       Babe     Ruth   1917    BOS  2
+## 5       Babe     Ruth   1918    BOS 11
+## 6       Babe     Ruth   1919    BOS 29
+## 7       Babe     Ruth   1920    NYA 54
+## 8       Babe     Ruth   1921    NYA 59
+## 9       Babe     Ruth   1922    NYA 35
+## 10      Babe     Ruth   1923    NYA 41
+## 11      Babe     Ruth   1924    NYA 46
+## 12      Babe     Ruth   1925    NYA 25
+## 13      Babe     Ruth   1926    NYA 47
+## 14      Babe     Ruth   1927    NYA 60
+## 15      Babe     Ruth   1928    NYA 54
+## 16      Babe     Ruth   1929    NYA 46
+## 17      Babe     Ruth   1930    NYA 49
+## 18      Babe     Ruth   1931    NYA 46
+## 19      Babe     Ruth   1932    NYA 41
+## 20      Babe     Ruth   1933    NYA 34
+## 21      Babe     Ruth   1934    NYA 22
+## 22      Babe     Ruth   1935    BSN  6</code></pre>
+<hr />
 </div>
 
 
